<resources>
    <string name="app_name">AmazingDashboard</string>

    <!-- Drawer Menu Strings    -->
    <string name="adverts">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Автомобили</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_domestic">Бытовая техника</string>

    <string name="account">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="not_reg_email">Войдите или зарегистрируйтесь</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Sign Dialog    -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться!</string>
    <string name="sign_in_error">Не удалось войти!</string>
    <string name="send_verification_error">Не удалось отправить email для подтверждения!</string>
    <string name="send_verification_done">На вашу почту была отправлена ссылка для подтверждения аккаунта</string>
    <string name="reset_password_sent">Пароль выслан на электронную почту</string>
    <string name="reset_password_hint">Для восстановления пароля введите ваш email!</string>
    <!-- Sign Dialog    -->
    <string name="link_email_done">Связывание email и google аккаунта прошло успешно!</string>
    <string name="link_email_error">У вас уже есть Google аккаунт с этим email.\nВойдите в этот аккаунт, затем затем повторно зарегистрируйтесь по email, чтобы связать эти аккаунты</string>
    <string name="error_user_not_found">Нет пользователя с таким email адресом</string>
    <!-- Edit Activity    -->
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>

    <!-- Menu Select Image    -->
    <string name="m_select_image_delete">Удалить</string>
    <string name="m_select_image_add">Добавить изображение</string>
</resources>