<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/tv_sign_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ac_sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_reset_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/reset_password_hint"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/et_sign_email"
        app:layout_constraintStart_toStartOf="@+id/et_sign_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_title" />

    <EditText
        android:id="@+id/et_sign_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_hint" />

    <EditText
        android:id="@+id/et_sign_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="16dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_sign_email"
        app:layout_constraintStart_toStartOf="@+id/et_sign_email"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_email" />

    <com.google.android.gms.common.internal.SignInButtonImpl
        android:id="@+id/bt_sign_up_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
        android:text="@string/sign_up_action"
        app:layout_constraintEnd_toEndOf="@+id/et_sign_email"
        app:layout_constraintStart_toStartOf="@+id/et_sign_email"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_password" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/bt_google_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:buttonSize="wide"
        app:layout_constraintEnd_toEndOf="@+id/et_sign_email"
        app:layout_constraintStart_toStartOf="@+id/et_sign_email"
        app:layout_constraintTop_toBottomOf="@+id/bt_sign_up_in" />

    <Button
        android:id="@+id/bt_forget_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:visibility="gone"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/et_sign_email"
        app:layout_constraintStart_toStartOf="@+id/et_sign_email"
        app:layout_constraintTop_toBottomOf="@+id/bt_google_sign_in" />
</androidx.constraintlayout.widget.ConstraintLayout>